adjust media queries

--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <!--class="light"-->
+<html lang="pt-br"> <!--class="light"-->
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./style.css" />
 
     <meta charset="UTF-8" />
@@ -51,14 +44,12 @@
           <ion-icon name="logo-Instagram"></ion-icon>
         </a>
         <a
-          href="https://www.linkedin.com/in/guilherme-trevizan-b1230524a"
-          target="_blank"
-        >
+          href="https://www.linkedin.com/in/guilherme-trevizan-b1230524a" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
       <footer>
-        Feito com carinho pelo <a href="#" target="_blank">Guilherme</a>
+        Feito com carinho pelo <a href="https://www.instagram.com/gui_treviz" target="_blank">Guilherme</a>
       </footer>
     </div>
 
